Implement fully reactive flow without calling any block method

--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -3,3 +3,15 @@ micronaut:
     name: k8s-terraform-controller
   config-client:
     enabled: true
+
+kubernetes:
+  client:
+    discovery:
+      enabled: true
+      includes:
+        - kubernetes.default.svc
+    secrets:
+      enabled: false
+    config-maps:
+      labels:
+        - tf.module/config: controller
