--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,8 @@ plugins {
     id "net.ltgt.apt-eclipse" version "0.21"
 }
 
-version "0.1"
-group "k8s.terraform.controller"
+version new File('VERSION').text.trim()
+group "com.github.miguelaferreira.terraformcontroller"
 
 repositories {
     mavenCentral()
@@ -59,17 +59,23 @@ dependencies {
 test.classpath += configurations.developmentOnly
 
 mainClassName = "com.github.miguelaferreira.terraformcontroller.Application"
+
 // use JUnit 5 platform
 test {
     useJUnitPlatform()
 }
+
 jib {
     from {
         image = 'gcr.io/distroless/java:11'
     }
     to {
-        image = 'docker.pkg.github.com/miguelaferreira/k8s-terraform-controller/java11'
+        image = 'docker.pkg.github.com/miguelaferreira/k8s-terraform-module-controller/controller-java11'
+        tags = ["latest", version]
         credHelper = 'osxkeychain'
+    }
+    container {
+        jvmFlags = ["-XshowSettings: vm", "-XX:+UseContainerSupport"]
     }
 }
 
@@ -81,6 +87,7 @@ tasks.withType(JavaExec) {
     classpath += configurations.developmentOnly
     jvmArgs('-noverify', '-XX:TieredStopAtLevel=1', '-Dcom.sun.management.jmxremote')
 }
+
 tasks.withType(JavaCompile) {
     options.encoding = "UTF-8"
     options.compilerArgs.add('-parameters')
