--- a/docker/terraform-modules/Dockerfile
+++ b/docker/terraform-modules/Dockerfile
@@ -1,3 +1,10 @@
+FROM hashicorp/terraform:latest AS terraform-build
+
+COPY  modules /modules
+
+# initialize all modules
+RUN cd /modules && find . -type d -mindepth 2  -name '.terraform' -prune -o -type d -exec ash -c "cd {}; terraform init -backend=false" \;
+
 FROM alpine:latest AS base
 
 FROM scratch
@@ -7,7 +14,7 @@ COPY --from=base /bin/ls /bin/ls
 COPY --from=base /bin/cp /bin/cp
 COPY --from=base /lib/ld-musl-x86_64.so.1 /lib/ld-musl-x86_64.so.1
 
-COPY  modules /modules
+COPY --from=terraform-build /modules /modules
 
 VOLUME "/module-share"
 
