--- a/install/helm/k8s-terraform-module-controller/templates/rbac-controller.yaml
+++ b/install/helm/k8s-terraform-module-controller/templates/rbac-controller.yaml
@@ -10,6 +10,7 @@ metadata:
   name: resource-watcher
   labels:
     {{- include "k8s-terraform-module-controller.labels" . | nindent 4 }}
+    tf.module/config: controller
 rules:
   - apiGroups: [""]
     resources: ["configmaps", "secrets"]
@@ -23,6 +24,7 @@ metadata:
   name: sa-resource-watcher
   labels:
     {{- include "k8s-terraform-module-controller.labels" . | nindent 4 }}
+    tf.module/config: controller
 subjects:
   - kind: ServiceAccount
     name: {{ include "k8s-terraform-module-controller.serviceAccountName" . }}
@@ -39,6 +41,7 @@ metadata:
   name: pod-creator
   labels:
     {{- include "k8s-terraform-module-controller.labels" . | nindent 4 }}
+    tf.module/config: controller
 rules:
   - apiGroups: [""]
     resources: ["pods"]
@@ -52,6 +55,7 @@ metadata:
   name: sa-pod-creator
   labels:
     {{- include "k8s-terraform-module-controller.labels" . | nindent 4 }}
+    tf.module/config: controller
 subjects:
   - kind: ServiceAccount
     name: {{ include "k8s-terraform-module-controller.serviceAccountName" . }}
@@ -68,6 +72,7 @@ metadata:
   name: configmap-creator
   labels:
     {{- include "k8s-terraform-module-controller.labels" . | nindent 4 }}
+    tf.module/config: controller
 rules:
   - apiGroups: [""]
     resources: ["configmaps"]
@@ -81,6 +86,7 @@ metadata:
   name: sa-configmap-creator
   labels:
     {{- include "k8s-terraform-module-controller.labels" . | nindent 4 }}
+    tf.module/config: controller
 subjects:
   - kind: ServiceAccount
     name: {{ include "k8s-terraform-module-controller.serviceAccountName" . }}
@@ -97,6 +103,7 @@ metadata:
   name: secret-creator
   labels:
     {{- include "k8s-terraform-module-controller.labels" . | nindent 4 }}
+    tf.module/config: controller
 rules:
   - apiGroups: [""]
     resources: ["secrets"]
@@ -110,12 +117,44 @@ metadata:
   name: sa-secret-creator
   labels:
     {{- include "k8s-terraform-module-controller.labels" . | nindent 4 }}
+    tf.module/config: controller
 subjects:
   - kind: ServiceAccount
     name: {{ include "k8s-terraform-module-controller.serviceAccountName" . }}
 roleRef:
   kind: Role
   name: secret-creator
+  apiGroup: rbac.authorization.k8s.io
+
+---
+
+kind: Role
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: micronaut-kubernetes
+  labels:
+    {{- include "k8s-terraform-module-controller.labels" . | nindent 4 }}
+    tf.module/config: controller
+rules:
+  - apiGroups: [""]
+    resources: ["services", "endpoints", "configmaps", "secrets", "pods"]
+    verbs: ["get", "watch", "list"]
+
+---
+
+kind: RoleBinding
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: sa-micronaut-kubernetes
+  labels:
+    {{- include "k8s-terraform-module-controller.labels" . | nindent 4 }}
+    tf.module/config: controller
+subjects:
+  - kind: ServiceAccount
+    name: {{ include "k8s-terraform-module-controller.serviceAccountName" . }}
+roleRef:
+  kind: Role
+  name: micronaut-kubernetes
   apiGroup: rbac.authorization.k8s.io
 
 ---
