--- a/install/helm/k8s-terraform-module-controller/templates/serviceaccount-controller.yaml
+++ b/install/helm/k8s-terraform-module-controller/templates/serviceaccount-controller.yaml
@@ -1,6 +1,7 @@
 {{/* # @formatter:off */}}
 
 {{ if .Values.rbac.serviceAccount.create }}
+
 ---
 
 apiVersion: v1
@@ -9,10 +10,13 @@ metadata:
   name: {{ include "k8s-terraform-module-controller.serviceAccountName" . }}
   labels:
     {{- include "k8s-terraform-module-controller.labels" . | nindent 4 }}
+    tf.module/config: controller
   {{- with .Values.rbac.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
+
+---
 
 {{ end }}
 
