--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -10,22 +10,36 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
+  build_java:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - name: Docker login GitHub Packages (GITHUB_TOKEN)
+        shell: bash
+        env:
+          DOCKER_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run:  docker login https://docker.pkg.github.com -u publisher --password ${DOCKER_TOKEN}
       - uses: actions/checkout@v2
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: Build
+        uses: eskatos/gradle-command-action@v1
+        with:
+          gradle-version: 6.3
+          arguments: clean assemble
+      - name: Package and push container
+        uses: eskatos/gradle-command-action@v1
+        with:
+          gradle-version: 6.3
+          arguments: jib -Preckon.stage=rc -x test # tests require kubectl proxy to work
+      - name: Tag RC (GITHUB_TOKEN)
+        uses: eskatos/gradle-command-action@v1
+        with:
+          gradle-version: 6.3
+          arguments: reckonTagPush -Preckon.stage=rc
+        env:
+          GRGIT_USER: miguelaferreira
+          GRGIT_PASS: ${{ secrets.GITHUB_TOKEN }}
