--- a/.github/workflows/pull-requets-master.yml
+++ b/.github/workflows/pull-requets-master.yml
@@ -30,7 +30,7 @@ jobs:
         with:
           gradle-version: 6.3
           arguments: clean assemble
-      - name: Package
+      - name: Package and push container
         uses: eskatos/gradle-command-action@v1
         with:
           gradle-version: 6.3
