--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -25,6 +25,12 @@ jobs:
       - uses: actions/setup-java@v1
         with:
           java-version: 11
+      - name: Cache Gradle
+        id: cache-gradle
+        uses: actions/cache@v1
+        with:
+          path: ~/.gradle
+          key: ${{ runner.os }}-gradle
       - name: Build
         uses: eskatos/gradle-command-action@v1
         with:
