--- a/.github/workflows/pull-requets-master.yml
+++ b/.github/workflows/pull-requets-master.yml
@@ -22,6 +22,7 @@ jobs:
           DOCKER_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run:  docker login https://docker.pkg.github.com -u publisher --password ${DOCKER_TOKEN}
       - uses: actions/checkout@v2
+      - run: git fetch --prune --unshallow --tags
       - uses: actions/setup-java@v1
         with:
           java-version: 11
