Trigger TAG workflow on tag create

--- a/.github/workflows/tags.yml
+++ b/.github/workflows/tags.yml
@@ -1,11 +1,9 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: TAG
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
 on:
-  push:
+  create:
     tags:
       - '**'  # all tags
 
